# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  mprpccontroller.h  rpcheader.pb.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpcchannel.h  rpcprovider.h  zookeeperutil.h
test/mprpcexample/: callfriendservice.cc  consumer
test/mprpcexample/lib/include/: logger.h  mprpcapplication.h  mprpcconfig.h
test/protobuf/: main  main.cc  test.pb.cc  test.pb.h  test.proto
